# faux-show

./: .gitignore  LICENSE  README.md  cross.nix  default.nix
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/services/: mod.rs
backend/src/services/internal/: http.rs  mod.rs  ws.rs
deploy/: README.md  constants.sh  update.sh
deploy/@archive/: README.md
deploy/@archive/01_podman_deployment/: README.md  update.sh
deploy/@archive/02_full_nix_v1/: README.md
deploy/@archive/03_binary_only/: README.md  update.sh
deploy/@archive/03_binary_only/nix/: .gitignore  cross-shell.nix
deploy/@archive/full_nix/nix/: cross-compile-crane.nix
deploy/@archive/podman_deployment/: constants.sh
deploy/@archive/podman_deployment/quadlet/: members.sh  shmashmexa.container  shmashmexa_config.volume
deploy/@archive/podman_deployment/quadlet/shmashmexa_build/: Containerfile  shmashmexa.build
deploy/containerize/: Containerfile  containerize.sh
deploy/dev/: Containerfile  start.sh
deploy/nix/: .gitignore  commons.nix  cross-compile-crane.nix  cross-compile.nix  cross-shell.nix  flake.nix
deploy/prod/: backend_update.sh  constants.sh  push_image_to_prod.sh  update.sh  update_quadlet.sh
deploy/prod/quadlet/: members.sh  shmashmexa.container  shmashmexa_config.volume
deploy/quadlet/: shmashmexa.container  shmashmexa_config.volume
deploy/quadlet/shmashmexa_build/: Containerfile  shmashmexa.build
deploy/scripts/: 01_build_backend.sh  02_build_frontend.sh  03_push_to_device.sh
dev/: .gitignore  example_tabs.json  tabs.json  unused_tabs.json
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/components/: icon_button.svelte  main.svelte  single_digit_input.svelte  time.svelte  timer_page.svelte
frontend/src/lib/: commands.ts
nix/: cross-compile.nix  cross-shell.nix
