[package]
name = "faux-show-backend"
version = "0.3.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-tungstenite = "^0"
form_urlencoded = "^1"
futures-util = "^0"
hyper-util="^0"

serde = "1"
serde_json = "1"

#This imports the modules directly, but breaks building with nix. Instead, set dependency to the git repo locally as below.
#hyper-services = { path = "../../trm-rust-libs/hyper-services" } #Can't do this, because then can't build with nix.
#websocket = { path = "../../trm-rust-libs/websocket" } #Can't do this, because then can't build with nix.

hyper-services = { git = "file:///home/tyler/repos/trm-rust-libs" } #This works. But, just need to not specify hyper-services, have to specifically target the repo root
websocket = { git = "file:///home/tyler/repos/trm-rust-libs" } #This works. But, just need to not specify hyper-services, have to specifically target the repo root
#{ git = "https://github.com/overtone1000/trm-rust-libs" } #can remote git if building remotely is desired.